[package]
name = "libicsneo-sys"
version = "0.1.10"
edition = "2021"
license = "MIT"
repository = "https://github.com/intrepidcs/libicsneo-rs-sys"
authors = ["David Rebbe <drebbe@intrepidcs.com>"]
readme = "readme.md"
description = "Rust system level crate for libicsneo"
keywords = ["sys"]

[features]
default = ["build_libicsneo", "msvc_parallel_build"]
build_libicsneo = []
msvc_parallel_build = ["build_libicsneo"]

[build-dependencies]
bindgen = "0.60.*"
cmake = "0.1.48"
path-clean = "0.1.*"

[dependencies]
