[package]
name = "libicsneo-sys"
version = "0.1.17"
edition = "2021"
license = "MIT"
repository = "https://github.com/intrepidcs/libicsneo-rs-sys"
authors = ["David Rebbe <drebbe@intrepidcs.com>"]
readme = "readme.md"
description = "Rust system level crate for libicsneo"
keywords = ["sys"]

[features]
default = ["build_libicsneo", "ninja"]
build_libicsneo = []
ninja = ["build_libicsneo"]

[build-dependencies]
bindgen = "0.60.*"
cmake = "0.1.48"
path-clean = "0.1.*"
which = "4.3.0"

[dependencies]
