[package]
name = "libicsneo-sys"
version = "0.1.18"
edition = "2021"
license = "MIT"
repository = "https://github.com/intrepidcs/libicsneo-rs-sys"
authors = ["David Rebbe <drebbe@intrepidcs.com>"]
readme = "readme.md"
description = "Rust system level crate for libicsneo"
keywords = ["sys"]
exclude = [
    "src/libicsneo",
]

[features]
default = ["static"]
static = []

[build-dependencies]
bindgen = "0.65.*"
cmake = "0.1.48"
path-clean = "0.1.*"
which = "4.3.0"

[dependencies]
